# rust_api

./: .env  Cargo.toml
migration/src/: lib.rs  m20251218_143352_users.rs  m20260105_075646_refresh_tokens.rs
src/: app_state.rs  db.rs  main.rs  routes.rs
src/entity/: refresh_token.rs  user.rs
src/http/: mod.rs
src/http/controllers/: auth_controller.rs  user_controller.rs
src/http/errors/: api_error.rs
src/http/helpers/: parse.rs
src/http/middleware/: auth_middleware.rs
src/http/requests/: auth_request.rs  mod.rs  refresh_token_request.rs  update_profile_request.rs  user_request.rs
src/http/responses/: auth_response.rs  mod.rs  user_response.rs
src/http/routes/: auth_routes.rs  mod.rs  user_routes.rs
src/http/services/: auth_service.rs  mod.rs  rules.rs
src/http/types/: claims.rs  mod.rs  session.rs
src/seeders/: mod.rs  user_seeder.rs
