[package]
name = "rust_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["trace"] }  
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
validator = { version = "0.18", features = ["derive"] }

sea-orm = { version = "1.1", features = [
    "sqlx-mysql",
    "runtime-tokio-native-tls",
    "macros",
    "with-chrono",
] }
chrono = { version = "0.4", features = ["serde"] }


sea-orm-migration = { version = "1.1", features = ["runtime-tokio-native-tls"] }

dotenv = "0.15"
