[package]
name = "rust_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
validator = { version = "0.20.0", features = ["derive"] }

sea-orm = { version = "1.1", features = [
    "sqlx-mysql",
    "runtime-tokio-native-tls",
    "macros",
    "with-chrono",
] }

dotenv = "0.15"

chrono-tz = "0.10.4"

jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
bcrypt = "0.17.1"

chrono="0.4.42"

thiserror = "1.0" 

uuid = { version = "1.6", features = ["v4", "serde"] }